--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Compiled class file
-*.class
+**/*.class
+**/target
+**/test-classes
 
 # Log file
-*.log
+**/*.log
 
 # BlueJ files
 *.ctxt
@@ -21,3 +23,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IntelliJ IDEA #
+.idea
+*.iws
+**/*.iml
+*.ipr
+
+
+
